# ilm-opa-inf

./: .editorconfig  .gitignore  Makefile  README.md
.github/workflows/: deploy.inf.yml
cnf/api/: values.dev.yaml
cnf/azure/: redirect-urls.json
cnf/terraform/: step-dependencies.json  step-dependencies.yaml
cnf/terraform/120-vse-gcp-wpp-vm/: csi.wpp.tst.tfstate.bak
dat/cnf/dns/: flok.fi.bind
dat/k8s/dns/: dnsutils.json
dat/tpl/: docker-task.mk
doc/md/ilm-opa/: .bash_history  ilm-opa-gallery.md  ilm-opa-inf-isg-sync-s3-to-whost.md  ilm-opa-inf-isg.md  ilm-opa-inf-mog.md
doc/plantuml/: system-diagram.plantuml
lib/bash/: fetch-resources.sh
lib/bash/funcs/: export-json-section-vars.func.sh  read-conf-section.func.sh  resolve-dirname.func.sh
lib/make/: docker-utils.mk  install-img.func.mk  oae.func.mk  stop-img-containers.func.mk  zip-me.func.mk
lib/tpl/: docker-task.mk
src/bash/run/: ansible-init-for-k8s-aufs-storage.func.sh  apply-ad-secrets-to-k8s.func.sh  arch-check-install-docker.func.sh  (+87 more)
src/make/: aws-credentials.func.mk  aws-roles-switching.func.mk  docker-generate-provisioning-tasks.mk  docker-provisoning-tasks.mk  generate-conf-per-step.mk  generate-config-for-step.func.mk  install-devops-local-dev.mk  install-img-psql-client.func.mk  install-img-tf-runner.func.mk  k8s-ansible.func.mk  psql.func.mk  setup-app-inf.func.mk  terraform-tasks.incl.mk  user-group-automate.mk
src/python/user-group-automate/: pyproject.toml
src/python/user-group-automate/user_group_automate/: nba-generate-group-yaml.py  prp-generate-group-yaml.py
(+115 files in other folders)
